syntax = "proto3";

package go.micro.service.user;
option go_package = "proto/user;go_micro_service_user";

// 用户服务
service UserService {
	rpc Register (RegisterReq) returns (Resp) {}
	rpc Login (LoginReq) returns (LoginResp) {}
	rpc Logout (LogoutReq) returns (Resp) {}
	rpc GetLevel (GetLevelReq) returns (Resp) {}
	rpc GetUserByPhone (GetUserByPhoneReq) returns (GetUserByPhoneResp) {}
}

// 用户结构体
message User {
    string userId = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    int32 points = 5;   // 用户积分
    int32 level = 6;    // 用户等级
}

// 服务端响应
message Resp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

// 用户注册请求
message RegisterReq {
	User user = 1;
}

// 用户登录请求
message LoginReq {
	string phone = 1;
	string password = 2;
}

message LoginResp {
    int32 code = 1;
    string msg = 2;
    User user = 3;
}

// 用户登出请求
message LogoutReq {
	string userId = 1;
}

// 用户获取等级请求
message GetLevelReq {
	string userId = 1;
}

message GetUserByPhoneReq {
    string phone = 1;
}

message GetUserByPhoneResp {
    int32 code = 1;
    string msg = 2;
    User user = 3;
}
